test/err1/input.cool
// error: Unexpected '{', expecting id or type
class {
}

